// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReposContainer should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="ui divided relaxed list"
    role="list"
  >
    <div
      class="item"
      role="listitem"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          Enter user name to search for his repositories
        </div>
        <div
          class="description"
        >
          There should be a list of all his repositories with public access.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReposContainer should match snapshot with repos 1`] = `
<DocumentFragment>
  <div
    class="ui divided relaxed list"
    role="list"
  >
    <div
      class="item"
      role="listitem"
    >
      <div
        class="content"
      >
        <a
          class="header"
          href="https://github.com/gaearon/6to5"
        >
          6to5
        </a>
        <div
          class="description"
        >
          Turn ES6+ code into readable vanilla ES5 with source maps and more!
        </div>
        <div
          class="ui small labels tags"
        >
          <div
            class="ui label"
          >
            <i
              aria-hidden="true"
              class="star icon"
            />
            1
          </div>
          <div
            class="ui label"
          >
            <i
              aria-hidden="true"
              class="fork icon"
            />
            1
          </div>
          <div
            class="ui label"
          >
            <i
              aria-hidden="true"
              class="eye icon"
            />
            1
          </div>
          <div
            class="ui label"
          >
            JavaScript
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
